exports[`invalid(1): @property --brand {} 1`] = `

  1 | @property --brand {}

`;

exports[`invalid(1): @property --brand {} 2`] = `

Message:
> 1 | @property --brand {}
    | ^^^^^^^^^ Missing required \`syntax\` descriptor in \`@property\` rule.

`;

exports[`invalid(1): @property --brand {} 3`] = `

Message:
> 1 | @property --brand {}
    | ^^^^^^^^^ Missing required \`inherits\` descriptor in \`@property\` rule.

`;

exports[`invalid(10): @property --brand { syntax: \"brand\"; inherits: false; } 1`] = `

  1 | @property --brand { syntax: "brand"; inherits: false; }

`;

exports[`invalid(10): @property --brand { syntax: \"brand\"; inherits: false; } 2`] = `

Message:
> 1 | @property --brand { syntax: "brand"; inherits: false; }
    | ^^^^^^^^^ Missing required \`initial-value\` descriptor in \`@property\` rule.

`;

exports[`invalid(11): @property --brand { syntax: '<number>'; inherits: false; } 1`] = `

  1 | @property --brand { syntax: '<number>'; inherits: false; }

`;

exports[`invalid(11): @property --brand { syntax: '<number>'; inherits: false; } 2`] = `

Message:
> 1 | @property --brand { syntax: '<number>'; inherits: false; }
    | ^^^^^^^^^ Missing required \`initial-value\` descriptor in \`@property\` rule.

`;

exports[`invalid(12): @PROPERTY --brand { SYNTAX: \"<color>\"; INHERITS: false; } 1`] = `

  1 | @PROPERTY --brand { SYNTAX: "<color>"; INHERITS: false; }

`;

exports[`invalid(12): @PROPERTY --brand { SYNTAX: \"<color>\"; INHERITS: false; } 2`] = `

Message:
> 1 | @PROPERTY --brand { SYNTAX: "<color>"; INHERITS: false; }
    | ^^^^^^^^^ Missing required \`initial-value\` descriptor in \`@property\` rule.

`;

exports[`invalid(13): @pr\\6f perty --brand { s\\79 ntax: \"<color>\"; inh\\65 rits: false; } 1`] = `

  1 | @pr\\6f perty --brand { s\\79 ntax: "<color>"; inh\\65 rits: false; }

`;

exports[`invalid(13): @pr\\6f perty --brand { s\\79 ntax: \"<color>\"; inh\\65 rits: false; } 2`] = `

Message:
> 1 | @pr\\6f perty --brand { s\\79 ntax: "<color>"; inh\\65 rits: false; }
    | ^^^^^^^^^^^^ Missing required \`initial-value\` descriptor in \`@property\` rule.

`;

exports[`invalid(14): @property --brand { syntax: \"*\"; syntax: \"<color>\"; inherits: false; } 1`] = `

  1 | @property --brand { syntax: "*"; syntax: "<color>"; inherits: false; }

`;

exports[`invalid(14): @property --brand { syntax: \"*\"; syntax: \"<color>\"; inherits: false; } 2`] = `

Message:
> 1 | @property --brand { syntax: "*"; syntax: "<color>"; inherits: false; }
    | ^^^^^^^^^ Missing required \`initial-value\` descriptor in \`@property\` rule.

`;

exports[`invalid(15): @property --brand { s\\79 ntax: \"*\"; SYNTAX: \"<color>\"; inherits: false; } 1`] = `

  1 | @property --brand { s\\79 ntax: "*"; SYNTAX: "<color>"; inherits: false; }

`;

exports[`invalid(15): @property --brand { s\\79 ntax: \"*\"; SYNTAX: \"<color>\"; inherits: false; } 2`] = `

Message:
> 1 | @property --brand { s\\79 ntax: "*"; SYNTAX: "<color>"; inherits: false; }
    | ^^^^^^^^^ Missing required \`initial-value\` descriptor in \`@property\` rule.

`;

exports[`invalid(16): @property --brand { syntax: \"<color>\" !important; inherits: false; } 1`] = `

  1 | @property --brand { syntax: "<color>" !important; inherits: false; }

`;

exports[`invalid(16): @property --brand { syntax: \"<color>\" !important; inherits: false; } 2`] = `

Message:
> 1 | @property --brand { syntax: "<color>" !important; inherits: false; }
    | ^^^^^^^^^ Missing required \`initial-value\` descriptor in \`@property\` rule.

`;

exports[`invalid(17): @property --brand { syntax: \"<color>\"; inherits: false; unknown: red; } 1`] = `

  1 | @property --brand { syntax: "<color>"; inherits: false; unknown: red; }

`;

exports[`invalid(17): @property --brand { syntax: \"<color>\"; inherits: false; unknown: red; } 2`] = `

Message:
> 1 | @property --brand { syntax: "<color>"; inherits: false; unknown: red; }
    | ^^^^^^^^^ Missing required \`initial-value\` descriptor in \`@property\` rule.

`;

exports[`invalid(18): @property --brand { syntax: \"<color>\"; inherits: false; --initial-value: red; } 1`] = `

  1 | @property --brand { syntax: "<color>"; inherits: false; --initial-value: red; }

`;

exports[`invalid(18): @property --brand { syntax: \"<color>\"; inherits: false; --initial-value: red; } 2`] = `

Message:
> 1 | @property --brand { syntax: "<color>"; inherits: false; --initial-value: red; }
    | ^^^^^^^^^ Missing required \`initial-value\` descriptor in \`@property\` rule.

`;

exports[`invalid(19): @property --brand { syntax: \" * \"; inherits: false; } 1`] = `

  1 | @property --brand { syntax: " * "; inherits: false; }

`;

exports[`invalid(19): @property --brand { syntax: \" * \"; inherits: false; } 2`] = `

Message:
> 1 | @property --brand { syntax: " * "; inherits: false; }
    | ^^^^^^^^^ Missing required \`initial-value\` descriptor in \`@property\` rule.

`;

exports[`invalid(2): @property --brand { syntax: \"<color>\"; inherits: false; } 1`] = `

  1 | @property --brand { syntax: "<color>"; inherits: false; }

`;

exports[`invalid(2): @property --brand { syntax: \"<color>\"; inherits: false; } 2`] = `

Message:
> 1 | @property --brand { syntax: "<color>"; inherits: false; }
    | ^^^^^^^^^ Missing required \`initial-value\` descriptor in \`@property\` rule.

`;

exports[`invalid(20): @property --brand { syntax: \"\"; inherits: false; } 1`] = `

  1 | @property --brand { syntax: ""; inherits: false; }

`;

exports[`invalid(20): @property --brand { syntax: \"\"; inherits: false; } 2`] = `

Message:
> 1 | @property --brand { syntax: ""; inherits: false; }
    | ^^^^^^^^^ Missing required \`initial-value\` descriptor in \`@property\` rule.

`;

exports[`invalid(21): @property --brand { syntax: \"<color>\"; inherits:; } 1`] = `

  1 | @property --brand { syntax: "<color>"; inherits:; }

`;

exports[`invalid(21): @property --brand { syntax: \"<color>\"; inherits:; } 2`] = `

Message:
> 1 | @property --brand { syntax: "<color>"; inherits:; }
    | ^^^^^^^^^ Missing required \`initial-value\` descriptor in \`@property\` rule.

`;

exports[`invalid(22): @supports (display: grid) { @property --brand { syntax: \"<color>\"; inherits: false; } } 1`] = `

  1 | @supports (display: grid) { @property --brand { syntax: "<color>"; inherits: false; } }

`;

exports[`invalid(22): @supports (display: grid) { @property --brand { syntax: \"<color>\"; inherits: false; } } 2`] = `

Message:
> 1 | @supports (display: grid) { @property --brand { syntax: "<color>"; inherits: false; } }
    |                             ^^^^^^^^^ Missing required \`initial-value\` descriptor in \`@property\` rule.

`;

exports[`invalid(23): @property --first {} @property --second { syntax: \"<color>\"; inherits: false; } 1`] = `

  1 | @property --first {} @property --second { syntax: "<color>"; inherits: false; }

`;

exports[`invalid(23): @property --first {} @property --second { syntax: \"<color>\"; inherits: false; } 2`] = `

Message:
> 1 | @property --first {} @property --second { syntax: "<color>"; inherits: false; }
    | ^^^^^^^^^ Missing required \`syntax\` descriptor in \`@property\` rule.

`;

exports[`invalid(23): @property --first {} @property --second { syntax: \"<color>\"; inherits: false; } 3`] = `

Message:
> 1 | @property --first {} @property --second { syntax: "<color>"; inherits: false; }
    | ^^^^^^^^^ Missing required \`inherits\` descriptor in \`@property\` rule.

`;

exports[`invalid(23): @property --first {} @property --second { syntax: \"<color>\"; inherits: false; } 4`] = `

Message:
> 1 | @property --first {} @property --second { syntax: "<color>"; inherits: false; }
    |                      ^^^^^^^^^ Missing required \`initial-value\` descriptor in \`@property\` rule.

`;

exports[`invalid(24): @property --brand {\n\t/* keep */\n\tsyntax: \"<color>\";\n\tinherits: false;\n} 1`] = `

  1 | @property --brand {
  2 | 	/* keep */
  3 | 	syntax: "<color>";
  4 | 	inherits: false;
  5 | }

`;

exports[`invalid(24): @property --brand {\n\t/* keep */\n\tsyntax: \"<color>\";\n\tinherits: false;\n} 2`] = `

Message:
> 1 | @property --brand {
    | ^^^^^^^^^ Missing required \`initial-value\` descriptor in \`@property\` rule.
  2 | 	/* keep */
  3 | 	syntax: "<color>";
  4 | 	inherits: false;
  5 | }

`;

exports[`invalid(25): @property --first { syntax: \"<color>\"; inherits: false; initial-value: red; } @property --second {} 1`] = `

  1 | @property --first { syntax: "<color>"; inherits: false; initial-value: red; } @property --second {}

`;

exports[`invalid(25): @property --first { syntax: \"<color>\"; inherits: false; initial-value: red; } @property --second {} 2`] = `

Message:
> 1 | @property --first { syntax: "<color>"; inherits: false; initial-value: red; } @property --second {}
    |                                                                               ^^^^^^^^^ Missing required \`syntax\` descriptor in \`@property\` rule.

`;

exports[`invalid(25): @property --first { syntax: \"<color>\"; inherits: false; initial-value: red; } @property --second {} 3`] = `

Message:
> 1 | @property --first { syntax: "<color>"; inherits: false; initial-value: red; } @property --second {}
    |                                                                               ^^^^^^^^^ Missing required \`inherits\` descriptor in \`@property\` rule.

`;

exports[`invalid(26): @property --brand { @custom { syntax: \"<color>\"; inherits: false; initial-value: red; } } 1`] = `

  1 | @property --brand { @custom { syntax: "<color>"; inherits: false; initial-value: red; } }

`;

exports[`invalid(26): @property --brand { @custom { syntax: \"<color>\"; inherits: false; initial-value: red; } } 2`] = `

Message:
> 1 | @property --brand { @custom { syntax: "<color>"; inherits: false; initial-value: red; } }
    | ^^^^^^^^^ Missing required \`syntax\` descriptor in \`@property\` rule.

`;

exports[`invalid(26): @property --brand { @custom { syntax: \"<color>\"; inherits: false; initial-value: red; } } 3`] = `

Message:
> 1 | @property --brand { @custom { syntax: "<color>"; inherits: false; initial-value: red; } }
    | ^^^^^^^^^ Missing required \`inherits\` descriptor in \`@property\` rule.

`;

exports[`invalid(3): @property --brand { syntax: \"<color>\"; initial-value: red; } 1`] = `

  1 | @property --brand { syntax: "<color>"; initial-value: red; }

`;

exports[`invalid(3): @property --brand { syntax: \"<color>\"; initial-value: red; } 2`] = `

Message:
> 1 | @property --brand { syntax: "<color>"; initial-value: red; }
    | ^^^^^^^^^ Missing required \`inherits\` descriptor in \`@property\` rule.

`;

exports[`invalid(4): @property --brand { inherits: false; initial-value: red; } 1`] = `

  1 | @property --brand { inherits: false; initial-value: red; }

`;

exports[`invalid(4): @property --brand { inherits: false; initial-value: red; } 2`] = `

Message:
> 1 | @property --brand { inherits: false; initial-value: red; }
    | ^^^^^^^^^ Missing required \`syntax\` descriptor in \`@property\` rule.

`;

exports[`invalid(5): @property --brand { syntax: \"<color>\"; } 1`] = `

  1 | @property --brand { syntax: "<color>"; }

`;

exports[`invalid(5): @property --brand { syntax: \"<color>\"; } 2`] = `

Message:
> 1 | @property --brand { syntax: "<color>"; }
    | ^^^^^^^^^ Missing required \`inherits\` descriptor in \`@property\` rule.

`;

exports[`invalid(5): @property --brand { syntax: \"<color>\"; } 3`] = `

Message:
> 1 | @property --brand { syntax: "<color>"; }
    | ^^^^^^^^^ Missing required \`initial-value\` descriptor in \`@property\` rule.

`;

exports[`invalid(6): @property --brand { inherits: false; } 1`] = `

  1 | @property --brand { inherits: false; }

`;

exports[`invalid(6): @property --brand { inherits: false; } 2`] = `

Message:
> 1 | @property --brand { inherits: false; }
    | ^^^^^^^^^ Missing required \`syntax\` descriptor in \`@property\` rule.

`;

exports[`invalid(7): @property --brand { initial-value: red; } 1`] = `

  1 | @property --brand { initial-value: red; }

`;

exports[`invalid(7): @property --brand { initial-value: red; } 2`] = `

Message:
> 1 | @property --brand { initial-value: red; }
    | ^^^^^^^^^ Missing required \`syntax\` descriptor in \`@property\` rule.

`;

exports[`invalid(7): @property --brand { initial-value: red; } 3`] = `

Message:
> 1 | @property --brand { initial-value: red; }
    | ^^^^^^^^^ Missing required \`inherits\` descriptor in \`@property\` rule.

`;

exports[`invalid(8): @property --brand { syntax: \"*\"; } 1`] = `

  1 | @property --brand { syntax: "*"; }

`;

exports[`invalid(8): @property --brand { syntax: \"*\"; } 2`] = `

Message:
> 1 | @property --brand { syntax: "*"; }
    | ^^^^^^^^^ Missing required \`inherits\` descriptor in \`@property\` rule.

`;

exports[`invalid(9): @property --brand { syntax: \"<length> | <color>\"; inherits: false; } 1`] = `

  1 | @property --brand { syntax: "<length> | <color>"; inherits: false; }

`;

exports[`invalid(9): @property --brand { syntax: \"<length> | <color>\"; inherits: false; } 2`] = `

Message:
> 1 | @property --brand { syntax: "<length> | <color>"; inherits: false; }
    | ^^^^^^^^^ Missing required \`initial-value\` descriptor in \`@property\` rule.

`;
